--- a/deepspace/src/View/GUI/HangarPanel.form
+++ b/deepspace/src/View/GUI/HangarPanel.form
@@ -17,14 +17,14 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="21" max="32767" attributes="0"/>
+              <EmptySpace pref="20" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Group type="102" attributes="0">
+                  <Component id="jScrollPanel" alignment="1" min="-2" pref="695" max="-2" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
                       <Component id="jlHangarPlaces" min="-2" pref="72" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jpbHangarAmount" min="-2" pref="159" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jScrollPanel" min="-2" pref="552" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
           </Group>
