--- a/deepspace/src/View/GUI/CurrentStationView.form
+++ b/deepspace/src/View/GUI/CurrentStationView.form
@@ -29,12 +29,12 @@
                                   <Component id="jlFuelUnitsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="jlNMedalsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jlFuelUnits" max="32767" attributes="0"/>
-                                  <Component id="jlShieldPower" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jlAmmoPower" pref="199" max="32767" attributes="0"/>
-                                  <Component id="jlNMedals" alignment="0" max="32767" attributes="0"/>
+                              <EmptySpace type="unrelated" pref="26" max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="jlShieldPower" alignment="1" max="32767" attributes="0"/>
+                                  <Component id="jlAmmoPower" alignment="1" pref="179" max="32767" attributes="0"/>
+                                  <Component id="jlFuelUnits" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jlNMedals" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                           <Component id="jlName" max="32767" attributes="0"/>
@@ -55,8 +55,8 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="jlName" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="jlName" min="-2" pref="28" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <Component id="jlAmmoPowerLabel" min="-2" max="-2" attributes="0"/>
@@ -72,7 +72,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jlShieldPower" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jlFuelUnits" min="-2" max="-2" attributes="0"/>
+                              <Component id="jlFuelUnits" min="-2" pref="15" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jlNMedals" min="-2" max="-2" attributes="0"/>
                           </Group>
@@ -85,7 +85,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jpShield" min="-2" pref="200" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jpHangar" pref="224" max="32767" attributes="0"/>
+              <Component id="jpHangar" pref="218" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -94,11 +94,15 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jlName">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="cc" red="cc" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="18" style="1"/>
         </Property>
-        <Property name="horizontalAlignment" type="int" value="2"/>
+        <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="name"/>
+        <Property name="opaque" type="boolean" value="true"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jlAmmoPowerLabel">
@@ -173,8 +177,11 @@
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jlDamageWeapons" pref="280" max="32767" attributes="0"/>
-                      <Component id="jlDamageShields" max="32767" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Component id="jlDamageShields" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      </Group>
+                      <Component id="jsDamageWeapons" pref="280" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -189,11 +196,11 @@
                       <Component id="jlDamageShields" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jlDamageWeaponsLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jlDamageWeapons" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jlDamageWeaponsLabel" min="-2" max="-2" attributes="0"/>
+                      <Component id="jsDamageWeapons" min="-2" pref="57" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="48" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -217,14 +224,35 @@
             <Property name="text" type="java.lang.String" value="sh"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="jlDamageWeapons">
+        <Container class="javax.swing.JScrollPane" name="jsDamageWeapons">
           <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Dialog" size="12" style="0"/>
+            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+              <Border info="null"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="we"/>
+            <Property name="horizontalScrollBarPolicy" type="int" value="31"/>
           </Properties>
-        </Component>
+          <AuxValues>
+            <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+          </AuxValues>
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+          <SubComponents>
+            <Component class="javax.swing.JTextArea" name="jtaDamageWeapons">
+              <Properties>
+                <Property name="editable" type="boolean" value="false"/>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ee" green="ee" red="ee" type="rgb"/>
+                </Property>
+                <Property name="columns" type="int" value="20"/>
+                <Property name="rows" type="int" value="5"/>
+                <Property name="text" type="java.lang.String" value="we"/>
+                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                  <Border info="null"/>
+                </Property>
+              </Properties>
+            </Component>
+          </SubComponents>
+        </Container>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="jpWeapon">
