--- a/deepspace/src/View/GUI/MainWindow.form
+++ b/deepspace/src/View/GUI/MainWindow.form
@@ -45,24 +45,20 @@
                               <Component id="jlVersion" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jlAuthor" min="-2" max="-2" attributes="0"/>
+                          <Component id="jlAuthor1" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="104" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
-                              <Component id="jbCombat" min="-2" pref="182" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jbNextTurn" max="32767" attributes="0"/>
-                                  <Group type="102" attributes="0">
-                                      <Component id="jbInfo" pref="86" max="32767" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="jbExit" min="-2" pref="87" max="-2" attributes="0"/>
-                                  </Group>
-                              </Group>
+                              <Component id="jbInfo" max="32767" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="jbExit" min="-2" pref="202" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jpCurrentEnemy" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jbCombat" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jbNextTurn" alignment="1" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -82,30 +78,24 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jlAuthor" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jpCurrentEnemy" pref="740" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jlAuthor1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="40" max="32767" attributes="0"/>
+                      <Component id="jpCurrentEnemy" min="-2" pref="601" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="jbNextTurn" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="jbInfo" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jbExit" alignment="3" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <Component id="jbCombat" min="-2" pref="56" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Group type="102" attributes="0">
-                      <Component id="jpCurrentStation" max="32767" attributes="0"/>
+                      <Component id="jbCombat" min="-2" pref="56" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jbDiscard" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jbMount" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jbDiscardComplete" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="jbNextTurn" min="-2" pref="37" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="jpCurrentStation" max="32767" attributes="0"/>
+              </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jbDiscard" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jbMount" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jbDiscardComplete" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jbInfo" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jbExit" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -115,7 +105,7 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="jbInfo">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Info."/>
+        <Property name="text" type="java.lang.String" value="Informaci&#xf3;n"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbInfoActionPerformed"/>
@@ -123,6 +113,9 @@
     </Component>
     <Component class="javax.swing.JToggleButton" name="jbNextTurn">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Dialog" size="14" style="1"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Siguiente turno &#x2192;"/>
       </Properties>
       <Events>
@@ -132,7 +125,7 @@
     <Component class="javax.swing.JLabel" name="jlDeepspace">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="24" style="1"/>
+          <Font name="Dialog" size="36" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Deepspace"/>
       </Properties>
@@ -172,7 +165,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="12" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Miguel &#xc1;ngel Fern&#xe1;ndez Guti&#xe9;rrez &#xb7; Sergio Quijano Rey"/>
+        <Property name="text" type="java.lang.String" value="Miguel &#xc1;ngel Fern&#xe1;ndez Guti&#xe9;rrez"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="jpCurrentEnemy">
@@ -188,7 +181,7 @@
     </Container>
     <Component class="javax.swing.JButton" name="jbExit">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Salir"/>
+        <Property name="text" type="java.lang.String" value="Salir del juego"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbExitActionPerformed"/>
@@ -217,6 +210,14 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbDiscardCompleteActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jlAuthor1">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Dialog" size="12" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Sergio Quijano Rey"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
