--- a/deepspace/src/View/GUI/NamesCaptureView.form
+++ b/deepspace/src/View/GUI/NamesCaptureView.form
@@ -138,6 +138,7 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbStartActionPerformed"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jbStartKeyPressed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jtName3">
